src/test/ui/feature-gates/bench.rs
#[bench] //~ ERROR use of unstable library feature 'test'
fn bench() {}

fn main() {}
